--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,10 @@ inputs:
       The version to be associated with the GitHub release that's created or updated.
       This will override any version calculated by the release-drafter.
     required: false
+  previous-version:
+    description: |
+      The previous version to use as the latest release.
+    required: false
   publish:
     description: |
       A boolean indicating whether the release being created or updated should be immediately published.
